Fix wishlist button overlap with card details

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@
 
 .card-title {
     margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.card-title:hover {
+    color: var(--colour-primary);
 }
 
 .card-price {
@@ -62,5 +67,4 @@
 .deal-card {
     width: 230px;
     padding: 10px;
-    cursor: pointer;
 }
